# OpENerFileObject

./: CMakeLists.txt  README.md  cipfile.c  cipfile.h  license.txt  uncrustify.cfg
data/: OPENERPCFILEOBJECTREV3RW.soc  OPENERPCFILEOBJECTREV3RW.stc
